<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Vinilos App</string>
    <string name="collector">Coleccionista</string>
    <string name="collectors">Coleccionistas</string>
    <string name="agregar_cancion">Agregar Canciones</string>
    <string name="visitor">Visitante</string>
    <string name="albums_title">Albumes</string>
    <string name="albums_new">Nuevo Album</string>
    <string name="tracks_new">Agregar Canción a Album:</string>
    <string name="logout">Salir</string>
    <string name="title_activity_scrolling_album_details" />
    <string name="songs">Pistas</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="logo">Logo</string>
    <string name="albumes">Albumes</string>
    <string name="albums">albums</string>
    <string name="run">run</string>
    <string name="performers">Artistas</string>
    <string name="CollectorTelephone">Collector telephone</string>
    <string name="CollectorName">Collector Name</string>
    <string name="CollectorEmail">Collector email</string>
    <string name="descriptionArtistSelected">imagen que muestra al artista seleccionado</string>
    <string name="descriptionCollector">Imagen que identifica la descripción del coleccionista</string>
    <string name="descriptionCollectorList">imagen que mustra al coleccionista dentro de una lista</string>
    <string name="segundos">Segundos:</string>
    <string name="minutos">Minutos:</string>
    <string name="_00">00</string>
    <string name="_0">0</string>
    <string name="duraci_n_de_la_canci_n" tools:keep="@string/duraci_n_de_la_canci_n">Duración de la Canción:</string>
    <string name="nombre_de_la_cancion">Nombre de la Canción</string>
    <string name="cancelar">CANCELAR</string>
    <string name="agregar">AGREGAR</string>
    <string name="album_name">Nombre del Album</string>
    <string name="album_description">Descripción</string>
    <string name="album_release_date">Año de Lanzamiento</string>
    <string name="album_genre">Genero</string>
    <string name="album_record_label">Compañía Discográfica</string>
    <string name="album_cover">URL Portada</string>
    <string name="invalid_form">Formulario invalido, por favor llenar todos los campos.</string>
    <string name="error_creating_album">Error creando este album.</string>
    <string name="error_creating_track">Error creando esta asociación.</string>
    <string name="track_associated">Canción asociada existosamente</string>
    <string name="album_created">Album creado existosamente</string>
    <string name="collector_name">Nombre de coleccionista</string>
    <string name="collector_email">Email de coleccionista</string>
    <string name="collector_phone">Telefono de coleccionista</string>
    <string name="favorite_performers">Artistas Favoritos</string>
    <string name="comments">Comentarios</string>
    <string name="descriptions">Descripción</string>
    <string name="ranking">ranking</string>
    <string name="artist_name">Nombre Artista</string>

    <string-array name="genres">
        <item name="classical">Classical</item>
        <item name="salsa">Salsa</item>
        <item name="rock">Rock</item>
        <item name="folk">Folk</item>
    </string-array>

    <string-array name="recordLabels">
        <item name="sony">Sony Music</item>
        <item name="emi">EMI</item>
        <item name="discosFuentes">Discos Fuentes</item>
        <item name="elektra">Elektra</item>
        <item name="faniaRecords">Fania Records</item>
    </string-array>
</resources>