<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/collectorList"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CollectorListActivity">

    <include layout="@layout/action_bar_toolbar"/>

    <TextView
        android:id="@+id/tvCollectorTitle"
        android:layout_marginStart="15dp"
        android:layout_marginTop="70dp"
        android:textSize="16sp"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/collectors"
        android:contentDescription="Titulo de la pagina Coleccionistas"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCollector"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="70dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/test"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textColor="#000000"
        android:textSize="26sp"
        android:layout_gravity="center|bottom" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/button_footer_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/primary"
        app:menu="@menu/menu_footer"
        app:itemIconTint="#FFFFFF"
        app:itemTextColor="#FFFFFF" />
</FrameLayout>