<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/performerList"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PerformersListActivity">

    <include layout="@layout/action_bar_toolbar"/>
...
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/performers" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPerformers"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="70dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_performer"
        android:layout_gravity="center"/>
...
